# agentwire

./: .agentwire.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  Dockerfile.portal  Dockerfile.runpod  Dockerfile.stt  Dockerfile.tts  Dockerfile.tts.gpu  EXPAND_STATE_USAGE.md  LICENSE  OPENCODE_CAPABILITIES_REPORT.md  README.md  docker-compose.gpu.yml  docker-compose.yml  hello.py  progress.txt  pyproject.toml  requirements-runpod.txt  requirements-tts.txt  test_expand_state.html  test_runpod_audio.py  test_runpod_input.json
.github/: PULL_REQUEST_TEMPLATE.md
agentwire/: __init__.py  __main__.py  actions.py  cli_safety.py  completion.py  config.py  daemon.py  history.py  init_agentwire.py  init_orchestrator.py  listen.py  locking.py  mcp_server.py  mission_safety.py  network.py  notifications.py  onboarding.py  pane_manager.py  project_config.py  server.py  session_detector.py  tasks.py  tts_router.py  tts_server.py  tunnels.py  validation.py  voiceclone.py  watcher.py  worktree.py
agentwire/agents/: base.py  tmux.py
agentwire/hooks/: agentwire-permission.sh  session-type-bash-hook.py  suppress-bg-notifications.sh
agentwire/mcp/: __init__.py  server.py  tools.py
agentwire/prompts/: __init__.py  init.md
agentwire/roles/: __init__.py  agentwire.md  chatbot.md  claude-delegation.md  claude-worker.md  glm-delegation.md  glm-orchestration.md  glm-worker.md  leader.md  voice-orchestrator.md  voice-worker.md  voice.md  worker.md
agentwire/sample_templates/: bug-fix.yaml  code-review.yaml  feature-impl.yaml  voice-assistant.yaml
agentwire/scripts/: remote-say  say
agentwire/skills/: SKILL.md  check-workers.md  delegate.md  init.md  jump.md  kill.md  machine-remove.md  machine-setup.md  new.md  output.md  send.md  sessions.md  spawn-worker.md  spawn.md  status.md  workers.md
agentwire/sounds/: README.md
agentwire/static/: agentwire-logo-splash-green-dark.xcf  agentwire-logo-splash-green-light.xcf
agentwire/stt/: __init__.py  none.py  openai.py  remote.py  stt_server.py  whispercpp.py  whisperkit.py
agentwire/templates/: __init__.py  base.html  dashboard.html  desktop.html  email_notification.html  room.html  session.html
agentwire/tts/: __init__.py  base.py  chatterbox.py  none.py  runpod_backend.py  runpod_handler.py
agentwire/utils/: __init__.py  file_io.py
docs/: CLI-REFERENCE.md  CODEBASE-ANALYSIS.md  CONFIGURATION.md  DEMO-VIDEO-PLAN.md  MIGRATION-MCP.md  MIGRATION_GUIDE.md  OPENCODE_INTEGRATION.md  OPENCODE_QUICKSTART.md  OPENCODE_ROLES.md  PORTAL.md  SESSION_TYPES.md  TROUBLESHOOTING.md  TTS-STT-ARCHITECTURE-REVIEW.md  USAGE.md  VIDEO-AI-GENERATION.md  VIDEO-CONTENT-SCHEDULE.md  VIDEO-TEASER-SCRIPT.md  architecture.md  claude-code-integration-analysis.md  cli-diagram.md  cli-review.md  configuration.md  deployment.md  docker-deployment.md  hooks-registration.md  installation-case-study.md  installation.md  mobile-tablet-ui-issues.md  qwen3-tts-performance.md  qwen3-tts.md  remote-machines.md  roadmap-gaps.md  roles-diagram.md  runpod-tts.md  scheduled-workloads.md  system-diagram.md  tmux-hooks.md  tts-setup.md  voice-input.md  wave5-completion-summary.md
docs/architecture/: multi-agent-support.md
docs/examples/: backend-workflow.md  frontend-workflow.md  multi-agent-workflow.md
docs/missions/: agent-parity.md  agentwire-mcp-server.md  centralize-audio-playback.md  cli-first-architecture.md  cli-worktree-support.md  composable-roles.md  connection-aware-tts-routing.md  conversation-history.md  damage-control-integration.md  desktop-audio-layer.md  desktop-ui.md  email-notifications.md  hierarchical-dashboard.md  initial-release.md  jinja2-refactor.md  mobile-responsive-fixes.md  opencode-full-support.md  opencode-integration.md  orchestrator-worker-pairing.md  pane-based-workers.md  permission-modes.md  portal-pane-support.md  portal-worktree-ui.md  project-config-integration.md  projects-model.md  pypi-release-review.md  remove-openai-stt.md  remove-sessions-cache.md  restricted-mode.md  (+12 more)
examples/: config-distributed.yaml  config-docker.yaml  config.yaml  machines-distributed.json  machines.json  rooms-example.json  sessions-example.json
opencode-plugin/: agentwire-notify.ts
scripts/: README.md  build-containers.sh  build-local.sh  deploy-runpod.sh  portal-entrypoint.sh  queue-processor.sh  runpod-endpoint.py  say  test-runpod-local.sh  test-runpod-remote.sh  test_zai_image.py  test_zai_video.py
skills/: SKILL.md  init.md  kill.md  new.md  output.md  send.md  spawn.md  status.md
tests/: test_mcp_server.py  test_session_detector.py  test_session_directory.py  test_tts_router.py
(+100 files in other folders)
